<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_padding"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_tv_general"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/settings_general"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_tv_show_open_contacts_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_show_open_contacts_page"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/settings_switch_show_open_contacts_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_tv_general" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_switch_show_open_contacts_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/settings_tv_show_open_contacts_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_tv_show_open_contacts_page"
        app:layout_constraintTop_toTopOf="@+id/settings_tv_show_open_contacts_page" />

    <TextView
        android:id="@+id/settings_tv_messenger_opening_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:text="@string/settings_sort_messengers"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_tv_show_open_contacts_page" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings_rv_messengers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_tv_messenger_opening_order" />

</androidx.constraintlayout.widget.ConstraintLayout>
